# deeplink

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/deeplink/: deeplink.py
tests/: test_func.py
