[metadata]
name = deeplink
version = 0.2
author = Dominik Madon
author_email = dominik@acm.org
description = Create links to simulate a specific directory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/domk/deeplink
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
   = src
packages = find:
python_requires = >=3.8
include_package_data = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
   deeplink = deeplink.deeplink:main
